--- a/_lp/lib/Lazyphp/Doc/Resources/views/template/index.html
+++ b/_lp/lib/Lazyphp/Doc/Resources/views/template/index.html
@@ -76,7 +76,7 @@
 
     </div> <!-- /container -->
 
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="http://libs.useso.com/js/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script type="text/javascript">
     function syntaxHighlight(json) {
