--- a/_lp/lib/Lazyphp/Doc/Resources/views/template/index.html
+++ b/_lp/lib/Lazyphp/Doc/Resources/views/template/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="php-apidoc - apid documenation generator">
     <meta name="author" content="Calin Rada">
     <title>php-apidoc v {{ version }}</title>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body      { padding-top: 70px; margin-bottom: 15px; }
         .tab-pane { padding-top: 10px; }
@@ -76,8 +76,8 @@
 
     </div> <!-- /container -->
 
-    <script src="http://libs.useso.com/js/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.11.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.1.1/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript">
     function syntaxHighlight(json) {
         if (typeof json != 'string') {
